[package]
name = "dcx_screencapturer"
authors = ["Diego Carvalho", "<dio.carvalho.veg@gmail.com>"]
version = "0.1.2"
edition = "2021"
description = "A library to capture screens"
documentation = "https://github.com/diocarvalho/dcx-screencapturer-rs"
repository = "https://github.com/diocarvalho/dcx-screencapturer-rs"
license  = "Unlicense"

[lib]
name = "dcx_screencapturer"
path = "src/lib.rs"

[dependencies]
windows-sys = {version="0.48.0", features=[
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
]}
